--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,9 @@
   <h1>Your name:   <%- user.name %></h1>
     <p>Welcome to your home ~</p>
     <p><a href="/logout">我要注销 </a>
-      <a href="/upload">我要上传</a>
+        <a href="/uplocation">上传位置</a>
+      <a href="/upload">上传文件</a>
+        <a href="/read">查看</a>
     </p>
   </body>
 </html>
